Refaktor: Beregningsresultat -> TilkjentYtelse