@@ -11,8 +11,8 @@ import java.util.Optional;
 import java.util.TreeSet;
 import java.util.stream.Collectors;
 
-import no.nav.foreldrepenger.fpformidling.beregning.BeregningsresultatAndel;
-import no.nav.foreldrepenger.fpformidling.beregning.BeregningsresultatFP;
+import no.nav.foreldrepenger.fpformidling.tilkjentytelse.TilkjentYtelseAndel;
+import no.nav.foreldrepenger.fpformidling.tilkjentytelse.TilkjentYtelseForeldrepenger;
 import no.nav.foreldrepenger.fpformidling.beregningsgrunnlag.BGAndelArbeidsforhold;
 import no.nav.foreldrepenger.fpformidling.beregningsgrunnlag.Beregningsgrunnlag;
 import no.nav.foreldrepenger.fpformidling.beregningsgrunnlag.BeregningsgrunnlagPeriode;
@@ -25,16 +25,16 @@ import no.nav.foreldrepenger.fpformidling.integrasjon.dokgen.dto.innvilgelsesvp.
 
 public final class NaturalytelseMapper {
 
-    public static List<Naturalytelse> mapNaturalytelser(BeregningsresultatFP beregningsresultat,
+    public static List<Naturalytelse> mapNaturalytelser(TilkjentYtelseForeldrepenger tilkjentYtelse,
                                                         Beregningsgrunnlag beregningsgrunnlag,
                                                         Språkkode språkkode) {
         TreeSet<Naturalytelse> naturalytelser = new TreeSet<>(Comparator.comparing(Naturalytelse::getEndringsdatoDate));
 
         List<BeregningsgrunnlagPeriode> beregningingsgrunnlagperioder = beregningsgrunnlag.getBeregningsgrunnlagPerioder();
         LocalDate startFørstePeriode = finnStartFørstePeriode(beregningingsgrunnlagperioder);
-        beregningsresultat.getBeregningsresultatPerioder().forEach(beregningsresultatPeriode -> {
-            var matchetBgPeriode = finnBeregningsgrunnlagperiode(beregningsresultatPeriode, beregningingsgrunnlagperioder);
-            beregningsresultatPeriode.getBeregningsresultatAndelList().forEach(andel -> {
+        tilkjentYtelse.getPerioder().forEach(tilkjentYtelsePeriode -> {
+            var matchetBgPeriode = finnBeregningsgrunnlagperiode(tilkjentYtelsePeriode, beregningingsgrunnlagperioder);
+            tilkjentYtelsePeriode.getAndeler().forEach(andel -> {
                 if (harNaturalytelse(matchetBgPeriode, andel, startFørstePeriode)) {
                     opprettNaturalytelse(matchetBgPeriode, andel, språkkode).ifPresent(naturalytelser::add);
                 }
@@ -46,11 +46,10 @@ public final class NaturalytelseMapper {
 
     private static LocalDate finnStartFørstePeriode(List<BeregningsgrunnlagPeriode> beregningingsgrunnlagperioder) {
         return beregningingsgrunnlagperioder.stream()
-                .map(BeregningsgrunnlagPeriode::getBeregningsgrunnlagPeriodeFom)
-                .collect(Collectors.toList()).stream().min(Comparator.naturalOrder()).orElse(null);
+                .map(BeregningsgrunnlagPeriode::getBeregningsgrunnlagPeriodeFom).toList().stream().min(Comparator.naturalOrder()).orElse(null);
     }
 
-    private static boolean harNaturalytelse(BeregningsgrunnlagPeriode matchetBgPeriode, BeregningsresultatAndel andel, LocalDate startFørstePeriode) {
+    private static boolean harNaturalytelse(BeregningsgrunnlagPeriode matchetBgPeriode, TilkjentYtelseAndel andel, LocalDate startFørstePeriode) {
         return PeriodeBeregner.finnBgPerStatusOgAndelHvisFinnes(matchetBgPeriode.getBeregningsgrunnlagPrStatusOgAndelList(), andel)
                 .flatMap(BeregningsgrunnlagPrStatusOgAndel::getBgAndelArbeidsforhold)
                 .filter(bgAndelArbeidsforhold -> bgAndelArbeidsforhold.naturalytelseBortfaltPrÅr() != null
@@ -63,7 +62,7 @@ public final class NaturalytelseMapper {
     }
 
     private static Optional<Naturalytelse> opprettNaturalytelse(BeregningsgrunnlagPeriode beregningsgrunnlagPeriode,
-                                                                BeregningsresultatAndel andel, Språkkode språkkode) {
+                                                                TilkjentYtelseAndel andel, Språkkode språkkode) {
         Optional<Naturalytelse> naturalytelse = Optional.empty();
         NaturalytelseStatus naturalytelseStatus = utledNaturalytelseStatus(beregningsgrunnlagPeriode);
 
